Actualización de los datos

--- a/Laboratorio1.ipynb
+++ b/Laboratorio1.ipynb
@@ -229,10 +229,8 @@
     "if image_b is None or image_g is None or image_r is None:\n",
     "    print(\"Error al cargar las imágenes.\")\n",
     "else:\n",
-    "    # Llamar a la función para reconstruir la imagen a color\n",
     "    color_image = reconstruct_color_image([image_b, image_g, image_r])\n",
     "\n",
-    "    # Mostrar la imagen reconstruida en una figura de matplotlib\n",
     "    plt.imshow(cv2.cvtColor(color_image, cv2.COLOR_BGR2RGB))\n",
     "    plt.title('Imagen Reconstruida')\n",
     "    plt.axis('off')\n",
@@ -242,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "95bcbc8b",
+   "id": "f80f0996",
    "metadata": {},
    "outputs": [
     {
@@ -264,10 +262,9 @@
     "if image_b is None or image_g is None or image_r is None:\n",
     "    print(\"Error al cargar las imágenes.\")\n",
     "else:\n",
-    "    # Llamar a la función para reconstruir la imagen a color\n",
+    "\n",
     "    color_image = reconstruct_color_image([image_b, image_g, image_r])\n",
     "\n",
-    "    # Mostrar la imagen reconstruida en una figura de matplotlib\n",
     "    plt.imshow(cv2.cvtColor(color_image, cv2.COLOR_BGR2RGB))\n",
     "    plt.title('Imagen Reconstruida')\n",
     "    plt.axis('off')\n",
@@ -277,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "d1cf312e",
+   "id": "37fadd4f",
    "metadata": {},
    "outputs": [
     {
@@ -345,10 +342,8 @@
     "\n",
     "    return imagen_tres_dimensiones\n",
     "\n",
-    "# Cargar una imagen utilizando cv2\n",
     "imagen_original = cv2.imread('gato.jpg')\n",
     "\n",
-    "# Llamar a la función para obtener la escala de grises en tres dimensiones\n",
     "escala_de_grises_tres_dimensiones = crear_escala_de_grises_tres_dimensiones(imagen_original)\n"
    ]
   },
@@ -478,7 +473,7 @@
     "            gris_aritmetico[i, j] = np.mean(pixel)\n",
     "\n",
     "    cv2.imwrite(\"gris_aritmetico.jpg\", gris_aritmetico)\n",
-    "# Ahora puedes llamar a la función con el nombre de tu imagen:\n",
+    "\n",
     "image_filename = \"gato.jpg\"\n",
     "plot_grayscale_histogram(image_filename)"
    ]
@@ -486,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "8f177a1f",
+   "id": "03464db4",
    "metadata": {},
    "outputs": [
     {
@@ -534,11 +529,9 @@
     "\n",
     "    # Agregar línea vertical para la media aritmética\n",
     "    plt.axvline(x=media_aritmetica, color='green', linestyle='dashed', linewidth=1, label='Media aritmética')\n",
-    "\n",
-    "    plt.legend()  # Mostrar la leyenda\n",
+    "    plt.legend() \n",
     "    plt.show()\n",
     "\n",
-    "# Uso de la función con tu imagen \"gris_aritmetico.jpg\"\n",
     "mostrar_histograma_con_media_aritmetica(\"gris_aritmetico.jpg\")"
    ]
   }
